# TinyGlyph2D

./: .gitignore  CONTRIBUTING.md  CONVENTIONS.md  README.md  meson.build
example/: example.c  tutorial.c
example/shaders/: fragment.glsl  vertex.glsl
src/: constants.h  defines.h  meson.build  vector.c  vector.h  window.c  window.h
test/: meson.build  testing_framework.h  vector_tests.c
